[package]
name = "codump"
version = "0.1.0"
edition = "2021"
description = "A straightforward and flexible code/comment dump tool"
repository = "https://github.com/Pistonite/codump"
license = "GPL-3.0"
authors = ["Pistonight <terrabyte100k@gmail.com>"]
keywords = ["tool"]
exclude = [
    ".github/**/*",
    "README.md.txtpp",
    "tests/**/*",
    "Justfile"
]

[dependencies]
clap = { version = "4.3.11", features = ["cargo", "derive"], optional = true }
regex = "1.9.1"

[dev-dependencies]
codump = { path = ".", features = ["cli"] }
toml = "0.7.6"

[features]
cli = ["clap"]

[[bin]]
name = "codump"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "codump"
path = "src/lib.rs"

